[package]
name = "receiver"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libspa = { git = "https://gitlab.freedesktop.org/pipewire/pipewire-rs" }
pipewire = { git = "https://gitlab.freedesktop.org/pipewire/pipewire-rs" }
libspa-sys = { git = "https://gitlab.freedesktop.org/pipewire/pipewire-rs" }
arr_macro = { version = "0.1.0", path = "../arr_macro" }
ringbuf = "^0.2.6"
debug_print = "^1.0.0"
